Archive2/cb/b7f942e59b6128/output
main.cpp:7:6: error: format attribute requires variadic function
void callPrintf(const char* const format, Rest...) __attribute__((format(printf, 1, 2)));                                                                                                               
     ^
1 error generated.
